# rambrain

./: .gitignore  CMakeLists.txt  FindAIO.cmake  Makefile  README  a00001.html  a00001.js  a00002.html  a00002.js  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  (+352 more)
classes/: classes.cpp  classes_rambrain.cpp  classes_rambrain_solution.cpp  compile.sh  run.sh
doc/: chunkStatusScheme.dot  doxyfile
nbody/: compile.sh  nbody.cpp  nbody_omp.cpp  nbody_ompsecure.cpp  nbody_rambrain_solution.cpp  nbody_splitted.cpp
profiling/: compile.sh  endless.cpp  getstats.sh
scripts/: autotest.sh  create-definitions-header.sh  endless-autotest.sh  gengit.sh  performance-test-config.sh  pre-commit.sh  print-swap-stats.sh  rambrain.spec  reformat.sh  run-performance-tests.sh  run-tests.sh  test_test_combinations.sh
scripts/hookmagic/: autotest.sh  autotest_singlebranch.sh  checkout_and_mail.sh  checkout_and_test.sh  post-receive
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  (+70 more)
simple/: compile.sh  run.sh  simple.cpp  simple_rambrain_solution.cpp
src/: .gitignore  CMakeLists.txt  common.h  configreader.cpp  configreader.h  cyclicManagedMemory.cpp  cyclicManagedMemory.h  dummyManagedMemory.h  exceptions.h  initialisation.cpp  initialisation.h  managedDummySwap.cpp  managedDummySwap.h  managedFileSwap.cpp  managedFileSwap.h  managedMemory.cpp  managedMemory.h  managedMemoryChunk.cpp  managedMemoryChunk.h  managedPtr.h  managedSwap.cpp  managedSwap.h  membrain_atomics.h  membrainconfig.cpp  membrainconfig.h  rambrain.h  rambrain_atomics.h  rambrainconfig.cpp  rambrainconfig.h  regexmatcher.cpp  regexmatcher.h  timer.cpp  timer.h
tests/: CMakeLists.txt  allTests.cpp  configTest.cpp  integrationTests.cpp  memeater.cpp  mpitest.cpp  performanceTestClasses.cpp  performanceTestClasses.h  performanceTests.cpp  performanceTests.h  performanceTestsWrapper.cpp  test.cpp  testAdhereTo.cpp  testConfig.conf  testConfigLine.cpp  testConfigReader.cpp  testCyclicManagedMemory.cpp  testDummyManagedMemory.cpp  testFilterHandling.cpp  testFilterHandling.h  testManagedDummySwap.cpp  testManagedFileSwap.cpp  testManagedMemory.cpp  testManagedPtr.cpp  testManagedSwap.cpp  testRegexMatcher.cpp  tester.cpp  tester.h  unitTests.cpp
